set(R5_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/..)
set(R5_INCLUDE_DIRS ${R5_ROOT} ${R5_ROOT}/avx512 ${R5_ROOT}/avx2 ${R5_ROOT}/scalar)
set(R5_TEST_ISA_FLAGS "")
set(R5_TEST_ISA "scalar")
if(VFFT_HAS_AVX512)
    set(R5_TEST_ISA "AVX512")
    set(R5_TEST_ISA_FLAGS ${VFFT_FLAGS_AVX512})
elseif(VFFT_HAS_AVX2)
    set(R5_TEST_ISA "AVX2")
    set(R5_TEST_ISA_FLAGS ${VFFT_FLAGS_AVX2})
endif()
function(_r5_add_target name source)
    cmake_parse_arguments(ARG "" "" "ISA_FLAGS" ${ARGN})
    add_executable(${name} ${source})
    target_include_directories(${name} PRIVATE ${R5_INCLUDE_DIRS})
    if(ARG_ISA_FLAGS)
        target_compile_options(${name} PRIVATE ${ARG_ISA_FLAGS})
    endif()
    target_compile_options(${name} PRIVATE ${VFFT_BASE_FLAGS})
    set_target_properties(${name} PROPERTIES C_STANDARD ${VFFT_C_STANDARD})
    if(VFFT_BASE_DEFINITIONS)
        target_compile_definitions(${name} PRIVATE ${VFFT_BASE_DEFINITIONS})
    endif()
    if(NOT WIN32)
        target_link_libraries(${name} PRIVATE m)
    endif()
    add_test(NAME ${name} COMMAND ${name})
endfunction()
_r5_add_target(test_radix5_dispatch test_radix5.c ISA_FLAGS ${R5_TEST_ISA_FLAGS})
set_tests_properties(test_radix5_dispatch PROPERTIES LABELS "radix5;correctness;${R5_TEST_ISA}")
message(STATUS "[radix5/tests] test_radix5_dispatch [${R5_TEST_ISA}]")
