set(R8_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/..)
set(R8_INCLUDE_DIRS ${R8_ROOT} ${R8_ROOT}/avx512 ${R8_ROOT}/avx2 ${R8_ROOT}/scalar ${CMAKE_CURRENT_SOURCE_DIR})

set(R8_TEST_ISA_FLAGS "")
if(VFFT_HAS_AVX512)
    set(R8_TEST_ISA "AVX512")
    set(R8_TEST_ISA_FLAGS -mavx512f -mavx512dq -mavx2 -mfma)
elseif(VFFT_HAS_AVX2)
    set(R8_TEST_ISA "AVX2")
    set(R8_TEST_ISA_FLAGS -mavx2 -mfma)
endif()

function(_r8_add_target name source)
    cmake_parse_arguments(ARG "" "" "ISA_FLAGS" ${ARGN})
    add_executable(${name} ${source})
    target_include_directories(${name} PRIVATE ${R8_INCLUDE_DIRS})
    if(ARG_ISA_FLAGS)
        target_compile_options(${name} PRIVATE ${ARG_ISA_FLAGS})
    endif()
    target_compile_options(${name} PRIVATE ${VFFT_BASE_FLAGS})
    set_target_properties(${name} PROPERTIES C_STANDARD ${VFFT_C_STANDARD})
    if(VFFT_BASE_DEFINITIONS)
        target_compile_definitions(${name} PRIVATE ${VFFT_BASE_DEFINITIONS})
    endif()
    if(NOT WIN32)
        target_link_libraries(${name} PRIVATE m)
    endif()
    add_test(NAME ${name} COMMAND ${name})
endfunction()

if(R8_TEST_ISA)
    _r8_add_target(test_radix8_dispatch test_radix8.c ISA_FLAGS ${R8_TEST_ISA_FLAGS})
    set_tests_properties(test_radix8_dispatch PROPERTIES LABELS "radix8;correctness;${R8_TEST_ISA}")
    message(STATUS "[radix8/tests] Test: test_radix8_dispatch [${R8_TEST_ISA}]")
endif()

get_property(_tests DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY TESTS)
list(LENGTH _tests _n)
message(STATUS "[radix8/tests] ${_n} target(s) registered")
